# ui-component-mcp-server-demo

./: :q!  .dockerignore  .envrc  .gitignore  .gitmodules  ARCHITECTURE.md  README.md  docker-compose.yml  node_test.py  test_agent_tool_implementation.py  test_representation_agent_fixed.py
agent/: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  start_api.sh  start_web.sh
agent/src/: __init__.py
agent/src/agent/: database.py  main.py  main1.1.py  main_test.py
agent/src/demo/: __init__.py  config_setup.md  evaluate.py  main.py  test_1.py  test_evaluation.py
agent/src/mcpDemo/: approval_tools.py  main.py
agent/src/microscopy/: __init__.py  agent.py
agent/src/report/: __init__.py  agent.py
agent/src/representation/: __init__.py  main.py  types.py
agent/src/representation/agents/: plan_runner.py  planner.py  step_runner.py
agent/src/representation/agents/service/: plan.py
agent/src/representation/service/: plan.py
agent/src/representation_analyze/: __init__.py  agent.py
agent/src/software/: __init__.py  agent.py
agent/src/theory/: __init__.py  agent.py
agent/src/theory_expert_agent/: __init__.py  agent.py  evaluation.py  prompts.py
agent/src/utils/: LongRunningLlmAgent.py  LongRunningMCPToolset.py  MyLlmAgent.py  MyMCPToolset.py  callbacks.py  config.py  database.py  prompts.py
agent/src/utils/func_tool/: database.py
agent/src/utils/lightrag_tool/: LightRAGTool.py  __init__.py  prompts.py
backend/: Dockerfile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  start.sh
backend/app/: database.py  main.py
backend/app/models/: __init__.py  agent.py  approval.py  backlog.py  code_interpreter.py  file.py  message.py  plan.py  todo.py
backend/app/routers/: agent.py  approvals.py  backlogs.py  code_interpreter.py  events.py  files.py  health.py  plans.py  todos.py
backend/app/services/: approval_service.py  backlog_service.py  code_interpreter_service.py  file_service.py  plan_service.py  redis_service.py  sse_service.py  todo_service.py
chat-frontend/: Dockerfile  package-lock.json  package.json
chat-frontend/app/: layout.tsx  page.tsx
chat-frontend/app/api/chat/: route.ts
chat-frontend/app/api/chat/sessions/[sessionId]/: route.ts
chat-frontend/components/chat/: chat-input.tsx  chat-message.tsx  chat-view.tsx
chat-frontend/components/tabs/: browser-tab.tsx  file-tab.tsx  notebook-tab.tsx  pdf-tab.tsx  plan-tab.tsx  tab-layout.tsx  terminal-tab.tsx  tools-tab.tsx
chat-frontend/contexts/: sse-context.tsx
chat-frontend/store/: chat-store.ts
docs/: adding-new-tools.md  component-guide.md  deployment.md  message-flow.md  ui-to-agent.md
frontend/: .env.example  Dockerfile  README.md  index.html  package-lock.json  package.json  start.sh  vite.config.ts
frontend/src/: App.css  App.tsx  ChatApp.tsx  main.tsx  vite-env.d.ts
frontend/src/components/AgentChat/: AgentChat.tsx  AgentChatStream.tsx  AgentInput.tsx  AgentMessage.tsx  index.ts
frontend/src/components/Approval/: ApprovalItem.tsx  ApprovalList.tsx
frontend/src/components/CodeInterpreter/: CodeInterpreterInput.tsx  CodeInterpreterItem.tsx  CodeInterpreterList.tsx  CodeInterpreterWidget.tsx
frontend/src/components/MicroscopeOperation/: MicroscopeOperationList.tsx  MicroscopeOperationWidget.tsx
frontend/src/components/Plan/: PlanList.tsx  PlanManager.tsx  TodoList.tsx  index.ts
frontend/src/components/TodoList/: BacklogItem.tsx  TerminalOutput.tsx  TodoInput.tsx  TodoItem.tsx  TodoList.tsx  TodoStats.tsx
frontend/src/components/Tools/: BacklogInput.tsx  BacklogItem.tsx  FileBrowser.tsx  PlanInput.tsx  PlanItem.tsx  PlanStats.tsx  TerminalOutput.tsx  Tools.tsx
frontend/src/contexts/: SSEContext.tsx
frontend/src/hooks/: useAgent.ts  useAgentStream.ts  useApprovals.ts  useCodeInterpreter.ts  useFiles.ts  useMicroscopeOperation.ts  usePlans.ts  usePlansNew.ts  useSSE.ts  useTerminal.ts  useTodos.ts
frontend/src/types/: agent.ts  approval.ts  code_interpreter.ts  file.ts  microscope_operation.ts  plan.ts  terminal.ts  todo.ts
mcp-server/: Dockerfile  README.md  pyproject.toml
mcp-server/src/: main.py  redis_client.py
mcp-server/src/tools/: __init__.py  approval_tools.py  approval_tools_register.py  backlog_tools.py  code_interpreter_tools.py  file_tools.py  plan_tools.py  terminal_tools.py  todo_tools.py
shared/constants/: channels.ts
shared/types/: message.ts  plan.ts  todo.ts
