[project]
name = "ui-component-agent"
version = "0.1.0"
description = "Google ADK Agent for UI Component Demo"
authors = [
    {name = "dptech-corp", email = "it@dp.tech"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "google-adk>=0.1.0",
    "python-dotenv>=1.0.0",
    "uvicorn[standard]>=0.24.0",
    "fastapi>=0.104.0",
    "litellm>=1.72.6",
    "pymysql>=1.1.0",
    "cryptography>=41.0.0",
    "sqlalchemy>=2.0.0",
    "aiomysql>=0.2.0",
    "lightrag-hku>=1.3.8",
    "networkx>=3.0.0",
    "anyio>=4.5.0",
    "graspologic>=3.4.1",
    "openai>=1.88.0",
    "numpy>=1.26.4",
    "nano_vectordb>=0.0.4.3",
    "fastmcp",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.6.0"
]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 88
